--- a/frontend/css/nosotros.css
+++ b/frontend/css/nosotros.css
@@ -58,8 +58,8 @@
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    margin-top: 50px;
-    margin-bottom: 50px;
+    padding-top: 50px;
+    padding-bottom: 50px;
     height: 100%;
   }
 
