--- a/frontend/css/nosotros.css
+++ b/frontend/css/nosotros.css
@@ -7,12 +7,12 @@
   margin-bottom: 60px;
 }
 
-.info-container h1{
+.info-container h1 {
   color: #38580e;
 }
 
 .cards-team-container {
-  background-color: #A63F03;
+  background-color: #a63f03;
   margin-bottom: 100px;
   padding-inline: 50px;
   color: white;
@@ -47,12 +47,10 @@
   transition: all 0.3s ease;
 }
 
-/* .teamater-contact a:hover {
-    transform: scale(1.5);
-} */
+
 
 /* Adaptable responsivo  */
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 780px) {
   .cards-team-container {
     display: flex;
     flex-wrap: wrap;
@@ -82,3 +80,37 @@
     padding: 70px;
   }
 }
+
+@media screen and (max-width: 1700px) {
+  .cards-team-container {
+    height: 200%;
+  }
+}
+
+.overlay {
+  width: 90%;
+  height: 80%;
+  transition: all 0.2s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.overlay p {
+  font-size: 1rem;
+  font-weight: bold;
+  margin-bottom: 0;
+}
+
+.card-teammate:hover img {
+  opacity: 0.2;
+}
+
+.card-teammate:hover .overlay {
+  opacity: 1;
+}
+
+
