background color is modified for large screens

--- a/frontend/css/nosotros.css
+++ b/frontend/css/nosotros.css
@@ -85,6 +85,13 @@
   .cards-team-container {
     height: 200%;
   }
+
+  .cards-team-container > div:nth-child(2n) {
+    background-color: #38580e;
+  }
+  .cards-team-container > div:nth-child(2n + 1) {
+    background-color: #38580e;
+  }
 }
 
 .overlay {
