--- a/frontend/css/nosotros.css
+++ b/frontend/css/nosotros.css
@@ -1,54 +1,144 @@
+/* ESTILOS GENERALES */
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+/* Contenedor informacion */
 .info-container {
-  padding: 20px;
+  padding: 40px;
   text-align: center;
 }
 .info-container p {
-  margin-top: 30px;
-  margin-bottom: 60px;
+  margin-top: 20px;
+  font-size: 1rem;
 }
 
 .info-container h1 {
   color: #38580e;
+  font-size: 1.8rem;
 }
 
+/* CONFIGURACION CARDS */
+
 .cards-team-container {
-  background-color: #cc5d18;
+  background-color: #cbd5d2;
   margin-bottom: 100px;
   padding-inline: 50px;
   color: white;
   text-align: center;
-  height: 550px;
+}
+
+.card-teammate img{
+  height:40vh;
+  object-fit: cover;
 }
 
 .cards-team-container .card-teammate {
   color: white;
   font-weight: bold;
-  font-size: 1.5rem;
+  font-size: 1.35rem;
   max-height: fit-content;
-  height: 105%;
+  height: 100%;
 }
 
 .cards-team-container > div:nth-child(2n) {
-  background-color: #38580e;
+  background-color: #3D4C47;
   margin-top: -50px;
   margin-bottom: 5%;
 }
 
 .cards-team-container > div:nth-child(2n + 1) {
-  background-color: #38580e;
+  background-color: #3D4C47;
   margin-top: 5%;
   margin-bottom: -50px;
 }
 
 .teamater-contact a {
   color: white;
-  font-size: 25px;
+  font-size: 1.5rem;
   margin: 5px;
   transition: all 0.3s ease;
 }
 
-/* Adaptable responsivo  */
-@media screen and (max-width: 1023px) {
+.overlay {
+  width: 85%;
+  height: 80%;
+  transition: all 0.2s ease;
+  opacity: 0;
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content:center;
+}
+
+.overlay p{
+  font-size: 1rem;
+  font-weight: 600;
+  display: flex;
+}
+
+.card-teammate:hover img {
+  opacity: 0.1;
+}
+
+.card-teammate:hover .overlay {
+  opacity: 1;
+}
+
+
+/* Adaptable responsivo */
+
+/* ESCITORIO NORMAL */
+@media (min-width:991px){
+  .info-container {
+    margin: 0px 40px;
+  }
+
+  .info-container h1 {
+    font-size: 2.3rem;
+  }
+
+  .info-container p {
+    font-size:1.1rem;
+    margin-bottom: 40px;
+  }
+
+  .cards-team-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .overlay p{
+    font-size: 0.85rem;
+  }
+
+}
+
+/* Escritorios anchos */
+@media (min-width: 1200px) {
+  .info-container h1 {
+    font-size: 45px;
+  }
+
+  .info-container p {
+    font-size:17px;
+  }
+  
+  .overlay p {
+    font-size: 0.98rem;
+  }
+}
+
+/* MOBILE */
+@media screen and (max-width:767px) {
   .cards-team-container {
     display: flex;
     flex-wrap: wrap;
@@ -57,10 +147,11 @@
     padding-top: 50px;
     padding-bottom: 50px;
     height: 100%;
+
   }
 
   .cards-team-container .card-teammate {
-    height: 20%;
+    max-width: 400px;
   }
 
   .cards-team-container > div:nth-child(2n) {
@@ -73,52 +164,26 @@
   }
 }
 
-@media screen and (min-width: 700px) {
-  .info-container {
-    padding: 70px;
-  }
-}
-
-@media screen and (min-width: 1024px) {
+/* TABLET */
+@media (min-width:767px) and (max-width: 991px) {
   .cards-team-container {
-    height: 300%;
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    padding-top: 30px;
+    padding-bottom: 30px;
   }
   
   .cards-team-container > div:nth-child(2n) {
-    background-color: #38580e;
+    margin-top: 10px;
+    margin-left: 30px;
+    margin-bottom: 30px;
   }
   .cards-team-container > div:nth-child(2n + 1) {
-    background-color: #38580e;
+    margin-top: 10px;
+    margin-left: 30px;
+    margin-bottom: 30px;
   }
-
-  .overlay p {
-    font-size: 15px;
-  }
-
-}
-
-.overlay {
-  width: 90%;
-  height: 80%;
-  transition: all 0.2s ease;
-  opacity: 0;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-}
-
-.overlay p {
-  font-size: 1rem;
-  font-weight: 600;
-  margin-bottom: 0;
-}
-
-.card-teammate:hover img {
-  opacity: 0.2;
-}
-
-.card-teammate:hover .overlay {
-  opacity: 1;
-}
+} 
