--- a/contacto.css
+++ b/contacto.css
@@ -7,23 +7,20 @@ body {
 }
 
 /* contact header  */
-.contact h2{
+.contact h2 {
   font-size: 2.5rem;
   color: #af480c;
 }
-.contact p{
+.contact p {
   margin-top: 50px;
   font-size: 1.5rem;
-
 }
 
-
-.card-contact-container{
+.card-contact-container {
   color: white;
   background-color: #38580e;
-  border-radius: 10px;             
+  border-radius: 10px;
 }
-
 
 /* formulario  */
 .contact-group {
@@ -50,18 +47,19 @@ body {
   top: -1.2em;
 }
 
-.contact-group input, textarea{
+.contact-group input,
+textarea {
   width: 100%;
   padding: 0.5em;
   color: white;
   background-color: transparent;
   border: none;
-  border-bottom: 2px solid #bae286a8; 
+  border-bottom: 2px solid #bae286a8;
   outline: none;
 }
 
 /*estilo y animación cuando hay erorr */
-.contact-group .error{
+.contact-group .error {
   border-bottom: 2px solid #af480c;
 }
 
@@ -70,7 +68,7 @@ body {
   top: -1.2em;
 }
 
-.form-contact button{
+.form-contact button {
   width: 100%;
   height: 40px;
   border: none;
@@ -82,14 +80,14 @@ body {
   font-weight: bold;
 }
 
-.form-contact button:hover{
+.form-contact button:hover {
   background-color: #bae286a8;
-  color: #172A3A;
+  color: #172a3a;
 }
 
-.info-container-contact{
+.info-container-contact {
   right: 0;
-  color: #172A3A;
+  color: #172a3a;
   background-color: #bae286a8;
   display: flex;
   flex-direction: column;
@@ -97,20 +95,17 @@ body {
   padding: 0.8em;
 }
 
-.info-container-contact ul{
+.info-container-contact ul {
   list-style: none;
 }
-.info-container-contact h2{
-  color: #172A3A;
+.info-container-contact h2 {
+  color: #172a3a;
   font-weight: bold;
   font-size: 1.2rem;
-  margin-bottom: 10PX;
+  margin-bottom: 10px;
 }
-.info-container-contact ul li{
-  margin-bottom: 10PX;
+.info-container-contact ul li {
+  margin-bottom: 10px;
   font-size: 0.8rem;
   font-weight: bold;
 }
-
-
-
