--- a/frontend/css/body.css
+++ b/frontend/css/body.css
@@ -12,6 +12,10 @@
   font-weight: bold;
 }
 
-li {
-  background-color: #40423d;
+:root{
+  --caribbean-current: #216869ff; 
+  --jungle-green: #49a078ff; 
+  --cambridge-blue: #9cc5a1ff; 
+  --ut-orange: #ff8811ff; 
+  --platinum: #dce1deff;
 }
