--- a/frontend/css/footer.css
+++ b/frontend/css/footer.css
@@ -4,13 +4,15 @@
   padding-left: 3%;
 }
 
+
+
 /* Estilos para el footer */
 .footer {
   margin-top: 15%;
   background-color: #216869;
   padding: 10px;
   font-size: 14px;
-  color: aliceblue;
+  color: rgb(255, 255, 255);
   text-align: center;
 }
 
@@ -23,6 +25,7 @@
 .row {
   margin: 20px 0;
 }
+
 
 ul {
   list-style-type: none;
@@ -38,6 +41,11 @@ ul li i {
   font-size: 130%;
 }
 
+.footer a{
+  color:white;
+  text-decoration: none;
+}
+
 input[type="email"] {
   padding: 5px;
   margin-right: 10px;
@@ -47,7 +55,7 @@ input[type="email"] {
 button[type="submit"] {
   padding: 5px 10px;
   background-color: #c56709;
-  color: aliceblue;
+  color: white;
   border: none;
   cursor: pointer;
 }
