--- a/frontend/css/navbar.css
+++ b/frontend/css/navbar.css
@@ -57,6 +57,11 @@ body{
   padding-right: 2rem;
 }
 
+header .hamburger-button{
+  background-color: #ff8811ff;
+  font-size: 30px;
+}
+
 nav .hamburger-button{
   background-color: #ff8811ff;
   font-size: 30px;
@@ -176,6 +181,7 @@ ul{
   .contenedor-box{
     align-items: center;
     padding: 0;
+    padding-bottom: 10px;
   }
 
   .box.laptop{
