--- a/frontend/css/contacto.css
+++ b/frontend/css/contacto.css
@@ -1,24 +1,25 @@
-:root{
-  --caribbean-current: #143E3E; 
-  --jungle-green: #49a078ff; 
-  --cambridge-blue: #9cc5a1ff; 
-  --ut-orange: #ff8811ff; 
+:root {
+  --caribbean-current: #143e3e;
+  --jungle-green: #49a078ff;
+  --cambridge-blue: #9cc5a1ff;
+  --ut-orange: #ff8811ff;
   --platinum: #dce1deff;
 }
-*{
+
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
+
 body {
   width: 100vw;
   /* display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  font-family: "Montserrat Alternates",sans-serif; */
-} 
-
+  font-family: "Montserrat Alternates", sans-serif; */
+}
 
 /* Esquema del contenedor */
 .contact {
@@ -27,20 +28,21 @@ body {
   border-radius: 50px;
   padding: 0px;
   position: relative;
+  margin: 20px auto;
 }
 
-.container-logo{
+.container-logo {
   display: flex;
   align-items: start;
   justify-content: center;
   padding: 20px 0px 0px 50px;
 }
 
-.container-logo img{
+.container-logo img {
   height: 7rem;
 }
 
-.container-gris{
+.container-gris {
   border-top-right-radius: 50px;
   border-bottom-right-radius: 50px;
   background-color: var(--ut-orange);
@@ -51,21 +53,22 @@ body {
   padding-top: 60px;
   margin-left: 40px;
   margin-right: 40%;
-} 
+}
 
-/* contact header  */
+/* contact header */
 .contact h2 {
   font-weight: bold;
   font-size: 1.8rem;
   color: var(--platinum);
   letter-spacing: 2px;
 }
+
 .contact p {
   display: none;
   font-size: 1rem;
-}   
+}
 
-/* formulario  */
+/* formulario */
 .form-contact {
   margin-top: 50px;
   margin-bottom: 50px;
@@ -74,14 +77,14 @@ body {
 .contact-group {
   position: relative;
   margin-bottom: 2rem;
-} 
+}
 
-/*animación label */
+/* animación label */
 .contact-group label {
   position: absolute;
   left: 0;
   top: 0;
-  transition: top 0.3s; 
+  transition: top 0.3s;
   font-size: 1.2rem;
   font-weight: bold;
 }
@@ -103,13 +106,13 @@ textarea {
   color: var(--platinum);
   background-color: transparent;
   border: none;
-  border-bottom: 2px solid #9CC5A1;
+  border-bottom: 2px solid #9cc5a1;
   outline: none;
-}  
+}
 
-/*estilo y animación cuando hay erorr */
+/* estilo y animación cuando hay error */
 .contact-group .error {
-  border-bottom: 2px solid #E74C3C;
+  border-bottom: 2px solid #e74c3c;
 }
 
 .contact-group input.error + label,
@@ -130,12 +133,11 @@ textarea {
 }
 
 .form-contact button:hover {
-  background-color: #FF8811;
+  background-color: #ff8811;
   color: #1b1b1d;
-} 
+}
 
 /* Contenedor info */
-
 .info-container-contact {
   color: var(--caribbean-current);
   height: 400px;
@@ -156,20 +158,91 @@ textarea {
   margin-bottom: 10px;
 }
 
-.info-container-contact .item-info-contact{
+.info-container-contact .item-info-contact {
   margin-bottom: 10px;
   font-size: 1.2rem;
   font-weight: bold;
   display: flex;
   align-items: center;
-} 
-.info-container-contact .item-info-contact i{
+}
+
+.info-container-contact .item-info-contact i {
   font-size: 2rem;
   margin: 10px 10px 10px 0px;
-} 
+}
 
 .info-container-contact .item-info-contact a {
   color: var(--caribbean-current);
   transition: all 0.3s ease;
   text-decoration: none;
-} 
+}
+
+/* Estilos responsivos */
+@media (max-width: 1200px) {
+  .card-contact-container {
+    margin-right: 30%;
+  }
+
+  .info-container-contact {
+    width: 380px;
+  }
+}
+
+@media (max-width: 992px) {
+  .card-contact-container {
+    margin-right: 20%;
+  }
+
+  .info-container-contact {
+    width: 320px;
+    top: 20%;
+  }
+}
+
+@media (max-width: 768px) {
+  .contact {
+    padding: 0 20px;
+  }
+
+  .card-contact-container {
+    margin: 0 auto;
+    padding-top: 40px;
+  }
+
+  .info-container-contact {
+    position: relative;
+    width: 100%;
+    height: auto;
+    top: 0;
+    right: 0;
+    margin-top: 30px;
+    border-radius: 50px;
+  }
+
+  .container-logo {
+    justify-content: center;
+    padding-left: 0;
+  }
+}
+
+@media (max-width: 576px) {
+  .container-logo img {
+    height: 5rem;
+  }
+
+  .card-contact-container {
+    padding-top: 20px;
+  }
+
+  .info-container-contact h2 {
+    font-size: 1.6rem;
+  }
+
+  .info-container-contact .item-info-contact {
+    font-size: 1rem;
+  }
+
+  .info-container-contact .item-info-contact i {
+    font-size: 1.6rem;
+  }
+}
