--- a/frontend/css/footer.css
+++ b/frontend/css/footer.css
@@ -1,16 +1,15 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 
-:root{
-  --caribbean-current: #143E3E; 
-  --jungle-green: #49a078ff; 
-  --cambridge-blue: #9cc5a1ff; 
-  --ut-orange: #ff8811ff; 
+:root {
+  --caribbean-current: #143e3e;
+  --jungle-green: #49a078ff;
+  --cambridge-blue: #9cc5a1ff;
+  --ut-orange: #ff8811ff;
   --platinum: #dce1deff;
 }
 
-*{
+* {
   font-family: "Montserrat", sans-serif;
-
 }
 /* La clase content debe expandirse para llenar el espacio disponible */
 .content-footer {
@@ -21,7 +20,7 @@
   align-items: center;
 }
 
-.contenedor-suscribete{
+.contenedor-suscribete {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -29,21 +28,21 @@
   padding: 0;
 }
 
-.contenedor-imgAgon{
+.contenedor-imgAgon {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
-.contenedor-politicas{
+.contenedor-politicas {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
 
-.contenedor-siguenos{
+.contenedor-siguenos {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -83,15 +82,15 @@
 .content-footer ul li i {
   margin-right: 8px;
   font-size: 130%;
-} 
+}
 
 .footer a {
   color: white;
   text-decoration: none;
 }
 
-.content-footer h5{
-  font-size:1.1rem;
+.content-footer h5 {
+  font-size: 1.1rem;
 }
 
 .content-footer .row input[type="email"] {
@@ -115,12 +114,10 @@
 
 /* MOBILE */
 @media screen and (max-width: 767px) {
-  .content-footer{
-    font-size:0.6rem;
+  .content-footer {
+    font-size: 0.6rem;
   }
 }
-
-
 
 /* TABLET */
 @media screen and (max-width: 991px) {
@@ -128,13 +125,11 @@
     text-align: start;
   }
 
-  .contenedor-suscribete{
+  .contenedor-suscribete {
     margin-bottom: 60px;
   }
 
-  .contenedor-imgAgon{
+  .contenedor-imgAgon {
     margin-bottom: 30px;
   }
-  
 }
-
