imagenes productos y servicios

--- a/frontend/css/footer.css
+++ b/frontend/css/footer.css
@@ -1,5 +1,5 @@
 /* La clase content debe expandirse para llenar el espacio disponible */
-.content {
+.content-footer {
   flex: 1;
   padding-left: 3%;
 }
