se agregó el boton para ver todo en productos y servicios

--- a/frontend/css/categorias.css
+++ b/frontend/css/categorias.css
@@ -65,7 +65,7 @@
   height: 50px;
   border: none;
   color: var(--caribbean-current);
-  background-color: var(--platinum);
+  background-color: var(--cambridge-blue);
   font-weight: 550;
 }
 .contenedor-addCart button:hover {
