--- a/frontend/css/footer.css
+++ b/frontend/css/footer.css
@@ -6,10 +6,11 @@
 
 /* Estilos para el footer */
 .footer {
-  margin-top: 1%;
+  margin-top: 10%;
   background-color: #143e3e;
   padding: 10px;
-  font-size: 14px;
+  padding-top: 2%;
+  font-size: 18px;
   color: rgb(255, 255, 255);
   text-align: center;
 }
