Se agregó vista de detalles en productos y servicios, también se agregaron estilos

--- a/frontend/css/categorias.css
+++ b/frontend/css/categorias.css
@@ -41,6 +41,7 @@
   justify-content: space-between;
   border: 1px solid rgba(0, 0, 0, 0.336);
   margin-bottom: 5%;
+  cursor: pointer;
 }
 
 .header-producto {
