--- a/frontend/css/especificacionesCategorias.css
+++ b/frontend/css/especificacionesCategorias.css
@@ -22,10 +22,68 @@
   --platinum: #dce1deff;
 }
 
-#product-list .product {
-  margin: 20px;
+.product-container {
+  margin-top: 4%;
+  display: flex;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  max-width: 50%;
+  width: 100%;
+  height: 750px;
 }
 
-#product-detail img {
-  max-width: 100%;
+.product-image img {
+  width: 603px;
+  height: 350px;
+  height: auto;
+  display: block;
+  margin-top: 16%;
+}
+
+iframe {
+  display: block;
+  margin-top: 40%;
+  margin-left: 5%;
+}
+
+.product-details {
+  padding: 90px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.product-name {
+  font-size: 24px;
+  margin: 0 0 10px;
+}
+
+.product-price {
+  font-size: 20px;
+  color: #b12704;
+  margin: 0 0 10px;
+}
+
+.product-description {
+  font-size: 16px;
+  color: #555;
+  margin: 0 0 20px;
+}
+
+.add-to-cart {
+  background-color: var(--ut-orange);
+  color: #fff;
+  border: none;
+  padding: 10px;
+  font-size: 16px;
+  cursor: pointer;
+  border-radius: 3px;
+  transition: background-color 0.3s;
+}
+
+.add-to-cart:hover {
+  background-color: var(--ut-orange);
 }
