--- a/frontend/css/footer.css
+++ b/frontend/css/footer.css
@@ -1,58 +1,106 @@
-/* La clase content debe expandirse para llenar el espacio disponible */
-.content {
-  flex: 1;
-  padding-left: 3%;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
+:root{
+  --caribbean-current: #143E3E; 
+  --jungle-green: #49a078ff; 
+  --cambridge-blue: #9cc5a1ff; 
+  --ut-orange: #ff8811ff; 
+  --platinum: #dce1deff;
 }
 
+*{
+  font-family: "Montserrat", sans-serif;
 
+}
+/* La clase content debe expandirse para llenar el espacio disponible */
+.content-footer {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.contenedor-suscribete{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+}
+
+.contenedor-imgAgon{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.contenedor-politicas{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.contenedor-siguenos{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
 
 /* Estilos para el footer */
 .footer {
   margin-top: 15%;
-  background-color: #216869;
+  background-color: var(--caribbean-current);
   padding: 10px;
   font-size: 14px;
   color: rgb(255, 255, 255);
   text-align: center;
 }
 
-.imgAgon {
-  width: 100%;
+.content-footer .row .imgAgon {
+  width: 50px;
   max-width: 100px; /* Ajusta según sea necesario */
   height: auto;
 }
 
-.row {
+.content-footer .row {
   margin: 20px 0;
 }
 
-
-ul {
+.content-footer ul {
   list-style-type: none;
   padding: 0;
 }
 
-ul li {
+.content-footer ul li {
   margin-bottom: 10px;
 }
 
-ul li i {
+.content-footer ul li i {
   margin-right: 8px;
   font-size: 130%;
-}
+} 
 
 .footer a{
   color:white;
   text-decoration: none;
 }
 
-input[type="email"] {
+.content-footer h5{
+  font-size:1.1rem;
+}
+
+.content-footer .row input[type="email"] {
   padding: 5px;
+  text-align: center;
   margin-right: 10px;
   width: 70%;
 }
 
-button[type="submit"] {
+.content-footer .row button[type="submit"] {
   padding: 5px 10px;
   background-color: #c56709;
   color: white;
@@ -60,6 +108,32 @@ button[type="submit"] {
   cursor: pointer;
 }
 
-button[type="submit"]:hover {
+.content-footer .row button[type="submit"]:hover {
   background-color: #ff8811;
 }
+
+/* MOBILE */
+@media screen and (max-width: 767px) {
+  .content-footer{
+    font-size:0.6rem;
+  }
+}
+
+
+
+/* TABLET */
+@media screen and (max-width: 991px) {
+  .content-footer .row input[type="email"] {
+    text-align: start;
+  }
+
+  .contenedor-suscribete{
+    margin-bottom: 60px;
+  }
+
+  .contenedor-imgAgon{
+    margin-bottom: 30px;
+  }
+  
+}
+
