--- a/frontend/css/nosotros.css
+++ b/frontend/css/nosotros.css
@@ -16,14 +16,14 @@
 /* CONFIGURACION CARDS */
 
 .cards-team-container {
-  background-color: #cbd5d2;
+  background-color: #dce1deff;
   margin-bottom: 100px;
   padding-inline: 50px;
   color: white;
   text-align: center;
 }
 
-.imgcontainer {
+.card-teammate .imgcontainer {
   height: 50vh;
   position: relative;
 }
@@ -46,13 +46,13 @@
 }
 
 .cards-team-container > div:nth-child(2n) {
-  background-color: #3d4c47;
+  background-color: #315656;
   margin-top: -50px;
   margin-bottom: 5%;
 }
 
 .cards-team-container > div:nth-child(2n + 1) {
-  background-color: #3d4c47;
+  background-color: #315656;
   margin-top: 5%;
   margin-bottom: -50px;
 }
@@ -68,7 +68,7 @@
   color: #af480c;
 }
 
-.overlay {
+.card-teammate .overlay {
   width: 90%;
   height: 80%;
   transition: all 0.2s ease;
@@ -83,7 +83,7 @@
   justify-content: center;
 }
 
-.overlay p {
+.card-teammate .overlay p {
   font-size: 1rem;
   font-weight: 600;
   display: flex;
@@ -121,7 +121,7 @@
     align-items: center;
   }
 
-  .overlay p {
+  .card-teammate .overlay p {
     font-size: 0.85rem;
   }
 }
@@ -136,13 +136,18 @@
     font-size: 17px;
   }
 
-  .overlay p {
+  .card-teammate .overlay p {
     font-size: 0.98rem;
   }
 }
 
 /* MOBILE */
 @media screen and (max-width: 767px) {
+
+  .nosotros-container {
+    margin-top: 60px; 
+  }
+
   .cards-team-container {
     display: flex;
     flex-wrap: wrap;
@@ -169,6 +174,10 @@
 
 /* TABLET */
 @media (min-width: 767px) and (max-width: 991px) {
+  .nosotros-container {
+    margin-top: 60px; 
+  }
+
   .cards-team-container {
     display: flex;
     flex-wrap: nowrap;
