--- a/frontend/css/navbar.css
+++ b/frontend/css/navbar.css
@@ -216,6 +216,164 @@
   width: 36px;
 }
 
+/* Carrito */
+
+  
+  .cart{
+  
+  position: fixed;
+  
+  top: 0;
+  
+  right: 0;
+  
+  right: -100%;
+  
+  width: 360px;
+  
+  height: 100vh;
+  
+  overflow-y: auto;
+  
+  overflow-x: hidden;
+  
+  padding: 20px;
+  
+  background: #143e3e;
+  
+  box-shadow: -2px solid 4px hsl(0 4%, 15% / 10%);
+  
+  border: 1px solid var(--ut-orange);
+  
+  transition: 1.7s;
+  
+  z-index: 1;
+  
+  }
+  
+  .cart.active{
+  
+  right: 0;
+  
+  transition: .5s;
+  
+  }
+  
+  .cart-title{
+  
+  text-align: center;
+  
+  font-size: 1.5rem;
+  
+  font-weight: 600;
+  
+  margin-top: 2rem;
+  
+  }
+  
+  .cart-box{
+  
+  display: grid;
+  
+  grid-template-columns: 32% 50% 18%;
+  
+  align-items: center;
+  
+  gap: 1rem;
+  
+  margin-top: 1rem;
+  
+  }
+  
+  .cart-quantity{
+  
+  border: 1px solid var(--caribbean-current);
+  
+  outline-color: var(--ut-orange);
+  
+  width: 1.4rem;
+  
+  text-align: center;
+  
+  font-size: 1rem;
+  
+  }
+  
+  .cart-remove{
+  
+  font-size: 24px;
+  
+  color: var(--ut-orange);
+  
+  cursor: pointer;
+  
+  }
+  
+  .total{
+  
+  display: flex;
+  
+  justify-content: flex-end;
+  
+  margin-top: 1.5rem;
+  
+  border-top: 1px solid var(--ut-orange);
+  
+  }
+  
+  .total-title{
+  
+  font-size: 1rem;
+  
+  font-weight: 600;
+  
+  }
+  
+  .total-price{
+  
+  margin-left: .5rem;
+  
+  }
+  
+  .btn-buy{
+  
+  display: flex;
+  
+  margin: 1,5rem auto 0 auto;
+  
+  padding: 12px 20px;
+  
+  border: none;
+  
+  background-color: #143e3e;
+  
+  color: aliceblue;
+  
+  font-size: 1rem;
+  
+  font-weight: 500;
+  
+  cursor: pointer;
+  
+  }
+  
+  #cart-close{
+  
+  position: absolute;
+  
+  top: 1rem;
+  
+  right: .8rem;
+  
+  font-size: 2rem;
+  
+  color: var(--platinum);
+  
+  cursor: pointer;
+  
+  }
+
+
 @media screen and (max-width: 991px) {
 
   .contenedor-navbar .contenedor-interno{
