Cambio color botón

--- a/frontend/css/categorias.css
+++ b/frontend/css/categorias.css
@@ -71,5 +71,5 @@
 }
 .contenedor-addCart button:hover {
   color: var(--platinum);
-  background-color: var(--caribbean-current);
+  background-color: var(--ut-orange);
 }
